  * Also install clang-rename.el & clang-rename.py in clang-4.0
  * scan-build llvm results are built using --show-description
  * Generate manpages for lli, lldb-mi & git-clang-format
  * Fix some lintian overrides
  * Generate more manpages
  * Remove some garbage from the manpages (Closes: #815991, #804347)
  * Disable -gsplit-dwarf on Ubuntu precise

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 25 Jul 2016 12:19:52 +0200

llvm-toolchain-snapshot (1:4.0~svn275970-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Bring back llvm-4.0-tools to life
  * ship clang-tblgen & yaml-bench as part of the libclang-common-X.Y-dev
    package

  * amd64 llvm testsuite is green, bring back the failure in case of error
  * Fix the cmake paths in llvm-3.9-dev deb package. Thanks to Brad King
    for the patch (Closes: #819072)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 25 Jul 2016 12:18:52 +0200

llvm-toolchain-3.9 (1:3.9~svn275918-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Silent test CodeGen/SPARC/LeonInsertNOPsDoublePrecision.ll
  * ship lli-child-target as part of the llvm-X.Y-runtime package
  * Bring back llvm-3.9-tools to life
  * ship clang-tblgen & yaml-bench as part of the libclang-common-X.Y-dev
    package
  * ship lli-child-target as part of the llvm-X.Y-runtime package

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 19 Jul 2016 15:34:08 +0200

llvm-toolchain-snapshot (1:3.9~svn274438-1) unstable; urgency=medium

  * Remove the autoconf section
  * Bring back the removal of the build dir
  * Fix the coverage builds (didn't allow several cflags)
  * Set the correct conflicts on python-lldb-3.8 (Closes: #817873)
  * Set the correct conflicts on python-clang-3.8 (Closes: #817872)
  * remove llvm26003-sanitizer-check-env.diff (merged upstream)
  * Do not fail the build if the manpages cannot be built (failing on
    Ubuntu precise)
  * Install libfindAllSymbols.a as part of libclang-X.Y-dev
  * Ship scan-build-py